// Generated IOS file for locale : en

"language"="en";

// commons_section - Commons section
"app_name"="MojSkrbnik";
"action_sign_up"="Register";
"action_sign_in"="Log in";
"action_sign_up_uppercased"="REGISTER";
"action_sign_in_uppercased"="LOG IN";
"action_next"="NEXT";
"action_confirm"="Confirm";
"action_go_back"="Back";
"action_back"="Back";
"action_continue"="Continue";
"action_save"="Save";
"action_close"="Close";
...
"action_copy"="Copy";
"action_send"="Send";
"action_receive"="Receive";
"action_accept" = "Accept";
"action_reject" = "Reject";
"lbl_share"="Share via";
"lbl_first_name"="First name";
"lbl_last_name"="Last name";
"lbl_email"="Email";
"lbl_password"="Password";
"lbl_country_of_residence"="Country of residence";
"lbl_country"="Country";
"lbl_your_phone_number"="Phone number";
"lbl_phone_number"="Phone number";
"lbl_step"="Step";
"lbl_advisor"="Advisor";
"lbl_advisors"="Advisors";
...

"registration_privacy_policy"="I acknowledge that my information will be used in accordance with the ";
"registration_sign_up_success"="Sign up successful!";
"registration_check_email"="Please check your email for the email confirmation link, follow the instructions and log in again";
"registration_success_msgs"="User registered!";
"registration_go_to_login"="GO TO LOGIN";
"login_forgot_password"="Forgot password?";
"login_forgot_password_reset_password"="RESET MY PASSWORD";
"login_forgot_password_text"="Please enter your email address so we can reset your password.";
"pin_required_msg_part1"="You must";
"pin_required_msg_part2"="in order to continue!";
"pin_wrong_attempt"="Wrong pin. Attempt";
"pin_enter_new"="Enter your new PIN";
"pin_confirm"="Confirm your new PIN";
"pin_current"="Enter your current PIN";
...
