...
                        Button(action: {
                            self.rootViewType.typeRootView = .registrationLogin
                        }) {
                            Text("action_sign_in_uppercased")
                                .font(.custom("ClanPro-Medium", size: 17))
                                .foregroundColor(.white)
                                .accessibility(identifier: "loginDisplay")
                            
                        }
                        .padding (
                            EdgeInsets (
                                top: 8,
                                leading: 16,
...
