...
                        print("button1")
                    }) {
                        Image("fbBtn")
                            .resizable()
                            .frame(width: 45.5, height: 45)
                    }
                    .accessibility(identifier: "facebookBtn")
                    
                    Button(action: {
                        print("button2")
                    }) {
                        Image("googleBtn")
                            .resizable()
                            .frame(width: 45.5, height: 45)
                    }
                    .accessibility(identifier: "googleBtn")
                }
                
...
